# voice-agents-from-scratch

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
00_start_here/: README.md  architecture_overview.md  check_deps.py  download_models.py  run_first_voice_agent.py
01_audio_io/: README.md  mic_input.py  record_to_file.py  speaker_output.py  stream_basics.py  vad_debug.py
02_speech_to_text/: README.md  handling_partial_results.py  streaming_transcription.py  transcribe_once.py
03_text_to_speech/: README.md  basic_tts.py  latency_optimization.py  streaming_tts.py  voice_profiles.py
04_agent_core/: README.md  debug_flow.py  memory.py  prompt_engine.py  response_loop.py  simple_agent.py
05_full_voice_loop/: README.md  blocking_voice_agent.py  debug_latency.py  streaming_voice_agent.py
06_real_time_systems/: README.md  duplex_conversation.py  echo_mode.py  interruption_handling.py  turn_taking.py  voice_activity_detection.py
07_tools/: README.md  calculator_tool.py  time_tool.py  tool_router.py  weather_tool.py  web_search_tool.py
08_personality/: README.md  emotional_responses.py  pacing_and_pauses.py  personality.json  voice_style_engine.py
09_projects/: README.md  download_llama_8b_instruct_gguf.py  llama_gguf.py  stream_util.py
09_projects/cli_assistant/: CODE.md  cli_assistant.py  run.py
09_projects/therapist_bot/: CODE.md  run.py  therapist_bot.py
09_projects/voice_interviewer/: CODE.md  run.py  voice_interviewer.py
10_deployment/: README.md  cli.py  modal_app.py  run_modal_instructions.py  websocket_server.py
(+23 files in other folders)
