[project]
name = "voice-agents-from-scratch"
version = "0.1.0"
description = "Educational framework for building real-time voice agents from scratch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.0",
    "onnxruntime>=1.17.0",
    "huggingface-hub>=0.24.0",
    "llama-cpp-python>=0.3.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "kokoro-onnx>=0.2.0",
]

[project.optional-dependencies]
vad = ["torch>=2.0.0", "torchaudio>=2.0.0"]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]
deploy = [
    "modal>=0.73.0",
]

[project.scripts]
voice-agent = "voice_agents.cli:main"
start = "voice_agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"
